[gd_scene load_steps=3 format=2]

[ext_resource path="res://util/VisionArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.8011, 35.2115 )

[node name="VisionArea" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 60, 0 )
shape = SubResource( 1 )

[node name="RaycastToPlayer" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 0 )
collision_mask = 22
collide_with_areas = true

[node name="CheckIntervalTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="CheckIntervalTimer" to="." method="_on_CheckIntervalTimer_timeout"]
